# Multi-EAR-services

./: .flake8  .gitignore  CONTRIBUTORS  LICENSE  MANIFEST.in  README.md  README.rst  conda.yml  environment.yml  install.sh  multi-ear-services.sh  pyproject.toml  setup.cfg  setup.py
etc/: dhcpcd.conf  dnsmasq.conf  rc.local  wpa_supplicant.default.conf
etc/gpio-scripts/: 7
etc/gpio-watch/: 7
etc/grafana/: grafana.ini
etc/hostapd/: hostapd.conf
etc/influxdb/: influxdb.conf  multi-ear-debug.conf  multi-ear.conf
etc/nginx/sites-available/: multi-ear-ctrl.proxy
etc/nginx/sites-enabled/: multi-ear-ctrl.proxy
etc/rsyslog.d/: multi-ear.conf
etc/system.d/system/: multi-ear-ctrl.service  multi-ear-uart.service  multi-ear-wifi.service
etc/systemd/system/: influxdb.service  multi-ear-ctrl.service  multi-ear-sync.service  multi-ear-uart.service  multi-ear-wifi.service  (+2 more)
etc/telegraf/: telegraf.conf
etc/wpa_supplicant/: wpa_supplicant.conf
multi-ear/: __init__.py  version.py
multi-ear-services/: README.rst
multi-ear-services/ctrl/: ctrl.py
multi-ear-services/data/: README.rst
multi-ear-services/lora/: README.rst
multi-ear-services/multi-ear-services/: __init__.py
multi-ear-services/uart/: README.md  README.rst  uart.py
multi-ear-services/wifi/: README.rst  disable_wifi_access_point.sh  enable_wifi_access_point.sh  wifi.py
multi-ear/ctrl/: README.md  utils.py
multi-ear/uart/: uart.py
multi_ear/: README.rst  version.py
multi_ear/wifi/: multi-ear-wifi  multi_ear_disable_access_point_mode  multi_ear_wifi_disable  multi_ear_wifi_enable  multi_ear_wifi_switch
multi_ear_services/: README.md  README.rst  __init__.py
multi_ear_services/ctrl/: README.rst  __init__.py  ctrl.py  utils.py  uwsgi.ini  wsgi.py
multi_ear_services/data/: README.md  README.rst
multi_ear_services/lora/: README.rst
multi_ear_services/sync/: README.rst
multi_ear_services/uart/: README.rst  __init__.py  config.ini  influx.ini  influxdb.ini  uart.py  uart_old.py  ws.py
multi_ear_services/util/: README.rst  __init__.py  client.py  dataselect.py  is_raspberry_pi.py  parse_config.py  serial.py  serial_read.py
multi_ear_services/wifi/: README.md  README.rst  append_to_wpa_supplicant  append_wpa_supplicant  autohotspot  multi-ear-wifi
multi_ear_services/ws/: README.rst  ws.py
services/info/: .install.sh.swp  __init__.py  info.py  info.service  install.sh  nginx.proxy  uwsgi.ini
services/uart/: install.sh  uart.py  uart.service
src/multi_ear_services/: __init__.py
(+42 files in other folders)
