[build-system]
requires = [
    "setuptools >= 40.0.4",
    "setuptools_scm >= 4, <6",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "multi_ear_services/version.py"
git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"
