[metadata]
name = multi_ear_services
description = Multi-EAR system services for the host Raspberry Pi OS LITE (32-bit) with sensorboard
long_description = file: README.rst
long_description_content_type = text/x-rst; charset = UTF-8
url = https://github.com/Multi-EAR/Multi-EAR-services
author = Olivier den Ouden, Pieter Smets, Mathijs Koymans and others
author_email = 
maintainer  =  Olivier den Ouden, Pieter Smets
maintainer_email = mail@pietersmets.be
license = 'GNU General Public License v3 (GPLv3)'
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Unix
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Education
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics
keywords = multi-ear, raspberry pi, mems, gpio, timeseries, waveforms
project_urls =
    Source = https://github.com/Multi-EAR/Multi-EAR-services
    Tracker = https://github.com/Multi-EAR/Multi-EAR-services/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.6
install_requires =
    pyserial>=3.5
    gpiozero>=1.6
    uwsgi>=2.0
    flask>=2.0
    flask-cors>=3.0
    numpy>=1.18
    influxdb-client>=1.20
    websockets>=10.1
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    multi-ear-uart = multi_ear_services.uart.uart:main
    multi-ear-ws = multi_ear_services.ws.ws:main

[options.data_files]
multi-ear-services =
    multi_ear_services/ctrl/uwsgi.ini
    multi_ear_services/uart/config.ini
bin =
    multi_ear_services/wifi/autohotspot
    multi_ear_services/wifi/append_wpa_supplicant

[bdist_wheel]
universal = true
